log
Thu 28 Sep 2023 05:59:09 PM UTC: 
 tests:  0|4
total_score: 0/70
e7283ef
Thu 28 Sep 2023 06:22:34 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:11: error: unused variable ‘nuevoHeap’ [-Werror=unused-variable]
   36 |     Heap* nuevoHeap = (Heap*)malloc(sizeof(Heap*));
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5164371
Thu 28 Sep 2023 06:30:01 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1ad1cc1
Thu 28 Sep 2023 06:39:09 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   41 |     nuevoHeap->heapArray = (heapElem*)malloc(3 * sizeof(heapElem*));
      |              ^~
heap.c:36:30: note: referencing an object of size 8 allocated by ‘malloc’
   36 |     Heap* nuevoHeap = (Heap*)malloc(sizeof(Heap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~
heap.c:47:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   47 |     nuevoHeap->capac = 3;
      |              ^~
heap.c:36:30: note: referencing an object of size 8 allocated by ‘malloc’
   36 |     Heap* nuevoHeap = (Heap*)malloc(sizeof(Heap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~
heap.c:48:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   48 |     nuevoHeap->size = 0;
      |              ^~
heap.c:36:30: note: referencing an object of size 8 allocated by ‘malloc’
   36 |     Heap* nuevoHeap = (Heap*)malloc(sizeof(Heap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd18fc3
Thu 28 Sep 2023 06:40:07 PM UTC: 
 heap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  1|3
total_score: 10/70
90f665b
Thu 28 Sep 2023 06:43:29 PM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3b7717b
Thu 28 Sep 2023 06:43:46 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
b34f755
Thu 28 Sep 2023 06:48:32 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
66a08a9
Thu 28 Sep 2023 06:49:58 PM UTC: 
 heap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:9: error: ‘h’ undeclared (first use in this function)
   35 |     if (h->size == h->capac) {
      |         ^
heap.c:35:9: note: each undeclared identifier is reported only once for each function it appears in
heap.c:46:35: error: implicit declaration of function ‘parent’ [-Werror=implicit-function-declaration]
   46 |     while (i != 0 && h->heapArray[parent(i)].priority < h->heapArray[i].priority) {
      |                                   ^~~~~~
heap.c:47:9: error: implicit declaration of function ‘swap’ [-Werror=implicit-function-declaration]
   47 |         swap(&(h->heapArray[i]), &(h->heapArray[parent(i)]));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
d1d0b9e
Thu 28 Sep 2023 06:50:57 PM UTC: 
 heap.c | 22 +++++-----------------
 1 file changed, 5 insertions(+), 17 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:34:14: error: variable ‘nuevoElemento’ set but not used [-Werror=unused-but-set-variable]
   34 |     heapElem nuevoElemento;
      |              ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
81d9f02
Thu 28 Sep 2023 06:51:41 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:34:14: error: variable ‘nuevoElemento’ set but not used [-Werror=unused-but-set-variable]
   34 |     heapElem nuevoElemento;
      |              ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
afd4b50
Thu 28 Sep 2023 06:54:20 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|2
total_score: 25/70
fb7b0b8
Thu 28 Sep 2023 06:56:45 PM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7e599c5
Thu 28 Sep 2023 06:57:06 PM UTC: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
20d7895
Thu 28 Sep 2023 06:58:47 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
69dc8d9
Thu 28 Sep 2023 06:59:04 PM UTC: 
 heap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  3|2
total_score: 25/70
8a6a714
Thu 28 Sep 2023 06:59:51 PM UTC: 
 heap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
13c4116
